--- a/browser-switch.nuspec
+++ b/browser-switch.nuspec
@@ -3,14 +3,15 @@
     <metadata>
         <!-- Required elements-->
         <id>Naxam.BrainTree.BrowserSwitch.Droid</id>
-        <version>0.1.3</version>
-        <description>Xamarin Binding Library - BrainTree BrowserSwitch</description>
-        <authors>Vu Duc Tuyen</authors>
+        <version>0.1.4</version>
+        <description>Xamarin Android Binding Library - BrainTree BrowserSwitch</description>
+        <authors>NAXAM CO.,LTD</authors>
         <owners>NAXAM CO.,LTD</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <title>Naxam - BrainTree BrowserSwitch</title>
-        <releaseNotes>BrainTree BrowserSwitch v0.1.3</releaseNotes>
-        <summary>Xamarin Binding Library - BrainTree BrowserSwitch</summary>
+        <title>Naxam - BrainTree BrowserSwitch for Android</title>
+        <releaseNotes>BrainTree BrowserSwitch v0.1.4</releaseNotes>
+        <summary>Xamarin Android Binding Library - BrainTree BrowserSwitch</summary>
+        <iconUrl>https://avatars3.githubusercontent.com/u/3453</iconUrl>
         <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
         <projectUrl>https://github.com/NAXAM/xand-braintree-browserswitch</projectUrl>
         <copyright>Copyright (c) 2017 NAXAM</copyright>
